ecmascript/parser/tests/typescript-errors/tsc/es6/computedProperties/computedPropertyNames3_ES5/input.ts.stderr
error[1102]: 'delete' cannot be called on an identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/es6/computedProperties/computedPropertyNames3_ES5/input.ts:6:17
  |
6 |     get [delete id]() { }
  |                 ^^

error[2703]: The operand of a delete operator must be a property reference.
 --> $DIR/tests/typescript-errors/tsc/es6/computedProperties/computedPropertyNames3_ES5/input.ts:6:17
  |
6 |     get [delete id]() { }
  |                 ^^

error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/es6/computedProperties/computedPropertyNames3_ES5/input.ts:8:17
  |
8 |     static get [<String>""]() { }
  |                 ^

